# haskell-xss-sanitize

./: .gitignore  Dockerfile  Makefile  README.md  local-standalone.yml  stack.yaml  test.html  xss-sanitize.cabal
Text/HTML/: SanitizeXSS.hs
Text/HTML/SanitizeXSS/: Css.hs
exec/: Main.hs  Options.hs
src/: DBConnect.hs  Main.hs  PubSub.hs
src/Text/HTML/: SanitizeXSS.hs
src/Text/HTML/SanitizeXSS/: Css.hs  Types.hs
test/: clean.html  invalid-attrs.html  main.hs
